--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
