--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
-    "cron": {
-      "jobs": [
+    "crons":  [
         {
           "path": "/check-reminders",
           "schedule": "*/1 * * * *"
         }
       ]
-    }
+    
   }
-  
