--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,21 @@
 {
-  "$schema": "https://supabase-api-six.vercel.app/vercel.json",
-    "crons":  [
-        {
-          "path": "/check-reminders",
-          "schedule": "*/1 * * * *"
-        }
-      ]
-    
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/$1"
+    }
+  ],
+  "crons":  [
+      {
+        "path": "/api/check-reminders",
+        "schedule": "*/1 * * * *"
+      }
+    ]
+}
