--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,14 @@
     {
       "src": "/(.*)",
       "dest": "/api/$1"
-    }
-  ]
+
+}],
+  "$schema": "https://supabase-api-six.vercel.app/vercel.json",
+    "crons":  [
+        {
+          "path": "/check-reminders",
+          "schedule": "*/1 * * * *"
+        }
+      ]
+    
 }
